add tractorist and new design

--- a/app/views/dashboard/accueil.html.erb
+++ b/app/views/dashboard/accueil.html.erb
@@ -170,60 +170,116 @@ body {
             <div class="row align-items-center">
                 <%if current_user.role == 'technicien'%>
 
-                <div class="col-md-4 col-lg-4">
-                    <%= image_tag 'logo.png', class: "img_cl" %>
-                </div>
-                <div class="col-md-8 col-lg-8">
-                    <div class="d-flex flex-column">
-                        <div class="d-flex flex-row justify-content-between align-items-center p-5 bg-dark text-white">
-                            <h3 class="display-5">Bienvenue <%= current_user.full_name%></h3></div>
-                        <div class="p-3 bg-black text-white text-center">
-                            <h3>Technicien à CDAE-FINANCE</h3>
-                        </div>
-                        <div class="d-flex flex-row text-white">
-                            <div class="p-4 bg-primary text-center skill-block">
-                                <div class="card-body text-center">
-                                    <a href="<%= dashboard_list_user_path%>" class="text-light">
-                                    <div class="text-center">
-                                        <i class="fas fa-user fa-2x my-2"></i>
-                                    </div>
-                                    Client
-                                    </a>
-                                </div>
+                    <div class="col-md-4 col-lg-4">
+                        <%= image_tag 'logo.png', class: "img_cl" %>
+                    </div>
+                    <div class="col-md-8 col-lg-8">
+                        <div class="d-flex flex-column">
+                            <div class="d-flex flex-row justify-content-between align-items-center p-5 bg-dark text-white">
+                                <h3 class="display-5">Bienvenue <%= current_user.full_name%></h3></div>
+                            <div class="p-3 bg-black text-white text-center">
+                                <h3>Technicien à CDAE-FINANCE</h3>
                             </div>
-                            <div class="p-3 bg-success text-center skill-block">
-                                 <div class="card-body text-center">
-                                    <a href="<%= service_requests_path%>" class="text-light">
-                                    <div class="text-center">
-                                        <i class="fas fa-th fa-2x my-2"></i>
+                            <div class="d-flex flex-row text-white">
+                                <div class="p-4 bg-primary text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%= dashboard_list_user_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-user fa-2x my-2"></i>
+                                        </div>
+                                        Client
+                                        </a>
                                     </div>
-                                    Service
-                                    </a>
                                 </div>
-                            </div>
-                            <div class="p-3 bg-warning text-center skill-block">
-                                 <div class="card-body text-center">
-                                    <a href="<%= remboursements_path%>" class="text-light">
-                                    <div class="text-center">
-                                        <i class="fas fa-exchange-alt fa-2x my-2"></i>
+                                <div class="p-3 bg-success text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%= service_requests_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-th fa-2x my-2"></i>
+                                        </div>
+                                        Service
+                                        </a>
                                     </div>
-                                     <span style="font-size: 15px;">Remboursement</span>
-                                    </a>
                                 </div>
-                            </div>
-                            <div class="p-3 bg-danger text-center skill-block">
-                                 <div class="card-body text-center">
-                                    <a href="<%= executions_path%>" class="text-light">
-                                    <div class="text-center">
-                                        <i class="fas fa-tractor fa-2x my-2"></i>
+                                <div class="p-3 bg-warning text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%= remboursements_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-exchange-alt fa-2x my-2"></i>
+                                        </div>
+                                        <span style="font-size: 15px;">Remboursement</span>
+                                        </a>
                                     </div>
-                                    Execution
-                                    </a>
+                                </div>
+                                <div class="p-3 bg-danger text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%= executions_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-tractor fa-2x my-2"></i>
+                                        </div>
+                                        Execution
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                <% elsif current_user.role == 'tractoriste'%>
+
+                    <div class="col-md-4 col-lg-4">
+                        <%= image_tag 'logo.png', class: "img_cl" %>
+                    </div>
+                    <div class="col-md-8 col-lg-8">
+                        <div class="d-flex flex-column">
+                            <div class="d-flex flex-row justify-content-between align-items-center p-5 bg-dark text-white">
+                                <h3 class="display-5">Bienvenue <%= current_user.full_name%></h3></div>
+                            <div class="p-3 bg-black text-white text-center">
+                                <h3>Tractoriste à CDAE-FINANCE</h3>
+                            </div>
+                            <div class="d-flex flex-row text-white">
+                                <div class="p-4 bg-primary text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%=tractors_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-user fa-2x my-2"></i>
+                                        </div>
+                                        Mes tracteurs
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="p-3 bg-success text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%= machines_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-th fa-2x my-2"></i>
+                                        </div>
+                                        Mes activités
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="p-3 bg-warning text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%= fonctionnements_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-exchange-alt fa-2x my-2"></i>
+                                        </div>
+                                        <span style="font-size: 15px;">Facture Avances</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="p-3 bg-danger text-center skill-block">
+                                    <div class="card-body text-center">
+                                        <a href="<%= soldes_path%>" class="text-light">
+                                        <div class="text-center">
+                                            <i class="fas fa-tractor fa-2x my-2"></i>
+                                        </div>
+                                        Facture soldes
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             
                 <%else%>
                     <div class="col-lg-7 py-5">
@@ -241,57 +297,57 @@ body {
                         Bienvenue chez CDAE-FINANCE ! Nous sommes ravis de vous accueillir et de contribuer à la réussite de vos projets agricoles. Merci pour votre confiance !
                         </marquee>   
                     </div>
-                <div class="col-lg-5">
-                    <div class="py-5 px-4 masthead-cards">
-                        <div class="d-flex">
+                    <div class="col-lg-5">
+                        <div class="py-5 px-4 masthead-cards">
+                            <div class="d-flex">
+                                
+                                <a href="#" class="w-50 pe-3 pb-4" data-toggle="modal" data-target="#exampleModalLong">
+                                    <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
+                                        <div class="card-body text-center">
+                                            <div class="text-center">
+                                                <i class="fas fa-tractor fa-4x my-2"></i>
+                                            </div>
+                                            Nouvelle Demande de service
+                                        </div>
+                                    </div>
+                                </a>
+                                <a href="<%=service_requests_path%>" class="w-50 pl-3 pb-4">
+                                    <div class="card border-0 border-bottom-blue shadow-lg shadow-hover">
+                                        <div class="card-body text-center">
+                                            <div class="text-center">
+                                                <i class="fa fa-th fa-4x my-2"></i>
+                                            </div>
+                                            Mes Demandes de service
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="d-flex">
+                                <a href="<%=remboursements_path%>" class="w-50 pe-3">
+                                    <div class="card border-0 border-bottom-yellow shadow-lg shadow-hover">
+                                        <div class="card-body text-center">
+                                            <div class="text-center">
+                                                <i class="fas fa-4x fa-exchange-alt my-2"></i>
+                                            </div>
+                                            Mes Payements
+                                        </div>
+                                    </div>
+                                </a>
                             
-                            <a href="#" class="w-50 pe-3 pb-4" data-toggle="modal" data-target="#exampleModalLong">
-                                <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
-                                    <div class="card-body text-center">
-                                        <div class="text-center">
-                                            <i class="fas fa-tractor fa-4x my-2"></i>
+                                <a href="https://wa.me/22996032116" class="w-50 pl-3">
+                                    <div class="card border-0 border-bottom-green shadow-lg shadow-hover">
+                                        <div class="card-body text-center">
+                                            <div class="text-center">
+                                                <i class="fab fa-4x fa-whatsapp my-2"></i>
+                                            </div>
+                                            Contactez CDAE-FINANCE
                                         </div>
-                                        Nouvelle Demande de service
                                     </div>
-                                </div>
-                            </a>
-                            <a href="<%=service_requests_path%>" class="w-50 pl-3 pb-4">
-                                <div class="card border-0 border-bottom-blue shadow-lg shadow-hover">
-                                    <div class="card-body text-center">
-                                        <div class="text-center">
-                                            <i class="fa fa-th fa-4x my-2"></i>
-                                        </div>
-                                        Mes Demandes de service
-                                    </div>
-                                </div>
-                            </a>
+                                </a>
+                            </div>
+                            <div class="shape"></div>
                         </div>
-                        <div class="d-flex">
-                            <a href="<%=remboursements_path%>" class="w-50 pe-3">
-                                <div class="card border-0 border-bottom-yellow shadow-lg shadow-hover">
-                                    <div class="card-body text-center">
-                                        <div class="text-center">
-                                            <i class="fas fa-4x fa-exchange-alt my-2"></i>
-                                        </div>
-                                        Mes Payements
-                                    </div>
-                                </div>
-                            </a>
-                        
-                            <a href="https://wa.me/22996032116" class="w-50 pl-3">
-                                <div class="card border-0 border-bottom-green shadow-lg shadow-hover">
-                                    <div class="card-body text-center">
-                                        <div class="text-center">
-                                            <i class="fab fa-4x fa-whatsapp my-2"></i>
-                                        </div>
-                                        Contactez CDAE-FINANCE
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="shape"></div>
                     </div>
-                </div>
                 <%end%>
             </div>
         </div>
