--- a/app/views/fonctionnements/show.html.erb
+++ b/app/views/fonctionnements/show.html.erb
@@ -35,7 +35,7 @@
     <div class="card-header text-center">
       <h3>Facture N° <%= @fonctionnement.id %></h3>
       <div class="d-flex" style="justify-content: space-around;">
-         <p><strong>Campagne :</strong> <%= @fonctionnement.campagne %> </p>
+         <p><strong>Campagne :</strong> <%= @fonctionnement.campagne %> - <%= @fonctionnement.campagne + 1%> </p>
           <p><strong>Date : </strong><%= Date.today.strftime('%d-%m-%Y') %></p>
       </div>
      
@@ -46,7 +46,7 @@
         <div class="col-md-6">
           <h3><u>Objet:</u> Facture d'avance</h3> <br>
           <strong>Proprietaire du tracteur :</strong> <%= @fonctionnement.user.full_name %><br>
-          <strong>Tracteur :</strong> <%= @fonctionnement.tractor.name %><br>
+          <strong>Nom du conducteur:</strong> <%= @fonctionnement.tractor.name %><br>
           
         </div>
       </div>
