--- a/app/views/indice_setting/index.html.erb
+++ b/app/views/indice_setting/index.html.erb
@@ -7,6 +7,11 @@
 <div class="custom-container">
   <div class="row justify-content-center">
       <div class="col-md-10">
+        <div class="mb-2 col-md-3  col-6 text-center">
+          <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalLong">
+              Ajout kg par ha par village
+          </button>
+        </div>
         <div class="card"> 
           <div class="card-header">
             
@@ -99,6 +104,24 @@
 
               </div>
 
+              <div class="form-group row">
+                <div class="col-md-12">
+                  <h5><strong>Information Kg percu par Ha labouré par village</strong></h5>
+                  <hr>
+                </div>
+                <div class="col-md-12">
+                     <% @villages.each do |village_setting| %>
+                        <li>
+                          <%= village_setting.village %> : <%= village_setting.kg_ha_labouree %> Kg |  <%= link_to "Modifier", edit_village_setting_path(village_setting) %>
+                        </li>
+                        <hr>
+                        
+                      <% end %>
+                  
+                </div>
+
+              </div>
+
               <div class="row">
                 <%= f.submit "Sauvégarder", class: "btn btn-primary" %>
               </div>
@@ -110,3 +133,45 @@
 </div>
 
 <% end %>
+
+  <!-- Modal restitution-->
+          <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">VILLAGE SETTING</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">×</span>
+                  </button>
+                  </div>
+                  <div class="modal-body" style="text-align: justify;">
+                      <!-- Description détaillée -->
+                    <%= render "village_settings/form", village_setting: @village_setting %>
+                  </div>
+                  <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                  </div>
+              </div>
+              </div>
+          </div>
+
+            <!-- Modal restitution-->
+          <div class="modal fade" id="exampleModalLongM" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">VILLAGE SETTING</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">×</span>
+                  </button>
+                  </div>
+                  <div class="modal-body" style="text-align: justify;">
+                      <!-- Description détaillée -->
+                    <%= render "village_settings/form", village_setting: @village_setting %>
+                  </div>
+                  <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                  </div>
+              </div>
+              </div>
+          </div>
