--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -12,7 +12,7 @@
     <thead class="table-dark text-center">
       <tr>
         <th>#</th>
-        <th>Nom du Tracteur</th>
+        <th>Nom du conducteur</th>
         <th>Propriétaire</th>
         <th>Date de Création</th>
         <th>Actions</th>
